Added new skills list - for both soft and hard skills -  and localized both. Added a speficalized question-answer type for skills.

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -609,5 +609,143 @@
   "showingAnswersFor": "{mode}-Antworten anzeigen",
   "completeQuestions": "Fragen vervollständigen",
 
-  "shortQuestionnaireMode": "Schneller Fragebogen-Modus"
+  "shortQuestionnaireMode": "Schneller Fragebogen-Modus",
+
+   "softSkillsGroupLeadershipManagement": "Führung & Management",
+  "softSkillsGroupCommunicationInterpersonal": "Kommunikation & Zwischenmenschlich",
+  "softSkillsGroupTeamworkCollaboration": "Teamarbeit & Zusammenarbeit",
+  "softSkillsGroupCognitiveAnalytical": "Kognitiv & Analytisch",
+  "softSkillsGroupPersonalEffectiveness": "Persönliche Effektivität",
+  "softSkillsGroupAdaptabilityGrowth": "Anpassungsfähigkeit & Wachstum",
+  "softSkillsGroupIndependenceSpecialized": "Unabhängigkeit & Spezialisiert",
+  
+  "softSkillLeadership": "Führung",
+  "softSkillDecisionMaking": "Entscheidungsfindung",
+  "softSkillMentoring": "Mentoring",
+  "softSkillAccountability": "Verantwortlichkeit",
+  "softSkillCommunicationSkills": "Kommunikationsfähigkeiten",
+  "softSkillPublicSpeaking": "Öffentliches Sprechen",
+  "softSkillInterpersonalSkills": "Zwischenmenschliche Fähigkeiten",
+  "softSkillNetworking": "Networking",
+  "softSkillCollaboration": "Zusammenarbeit",
+  "softSkillTeamwork": "Teamarbeit",
+  "softSkillRelationshipManagement": "Beziehungsmanagement",
+  "softSkillCustomerService": "Kundenservice",
+  "softSkillCriticalThinking": "Kritisches Denken",
+  "softSkillProblemSolvingSkills": "Problemlösungsfähigkeiten",
+  "softSkillInnovation": "Innovation",
+  "softSkillCommercialUnderstanding": "Kaufmännisches Verständnis",
+  "softSkillTimeManagement": "Zeitmanagement",
+  "softSkillOrganizationalSkills": "Organisationsfähigkeiten",
+  "softSkillAttentionToDetail": "Aufmerksamkeit für Details",
+  "softSkillDetailOriented": "Detailorientiert",
+  "softSkillFlexibility": "Flexibilität",
+  "softSkillAdaptability": "Anpassungsfähigkeit",
+  "softSkillLearning": "Lernen",
+  "softSkillContinuousLearning": "Kontinuierliches Lernen",
+  "softSkillEnthusiasmForLearning": "Lernbegeisterung",
+  "softSkillIndependence": "Unabhängigkeit",
+  "softSkillSelfReliance": "Selbstständigkeit",
+  "softSkillEnthusiasmForPolitics": "Begeisterung für Politik",
+  "softSkillEnthusiasmForPublicService": "Begeisterung für öffentlichen Dienst",
+
+  "hardSkillsGroupAnalysisResearch": "Analyse & Forschung",
+  "hardSkillsGroupProgrammingDevelopment": "Programmierung & Entwicklung",
+  "hardSkillsGroupDataScienceMl": "Data Science & Machine Learning",
+  "hardSkillsGroupCloudInfrastructure": "Cloud & Infrastruktur",
+  "hardSkillsGroupDatabaseDataManagement": "Datenbank & Datenmanagement",
+  "hardSkillsGroupDesignEngineeringTools": "Design & Engineering Tools",
+  "hardSkillsGroupBusinessIntelligence": "Business Intelligence & Visualisierung",
+  "hardSkillsGroupProductivityProjectManagement": "Produktivität & Projektmanagement",
+  "hardSkillsGroupMarketingDigitalTools": "Marketing & Digitale Tools",
+  "hardSkillsGroupDesignCreativeTools": "Design & Kreative Tools",
+  "hardSkillsGroupAiAutomationTools": "KI & Automatisierungstools",
+  "hardSkillsGroupSpecializedProfessional": "Spezialisierte Berufsfähigkeiten",
+  "hardSkillsGroupLegalCompliance": "Recht & Compliance",
+  "hardSkillsGroupEngineeringSpecializations": "Ingenieursspezialisierungen",
+  "hardSkillsGroupCommunicationDocumentation": "Kommunikation & Dokumentation",
+  "hardSkillsGroupSpecializedManagement": "Spezialisiertes Management",
+
+  "hardSkillGeneralAnalysis": "Allgemeine Analyse",
+  "hardSkillFinancialAnalysis": "Finanzanalyse",
+  "hardSkillMarketAnalysis": "Marktanalyse",
+  "hardSkillLegalAnalysis": "Rechtliche Analyse",
+  "hardSkillDataAnalysis": "Datenanalyse",
+  "hardSkillFinancialModeling": "Finanzmodellierung",
+  "hardSkillSocialScienceResearch": "Sozialwissenschaftliche Forschung",
+  "hardSkillMarketResearch": "Marktforschung",
+  "hardSkillStatisticalSkills": "Statistische Fähigkeiten",
+  "hardSkillMathematicalSkills": "Mathematische Fähigkeiten",
+  "hardSkillStatistics": "Statistik",
+  "hardSkillCalculus": "Analysis",
+  "hardSkillLinearAlgebra": "Lineare Algebra",
+  "hardSkillSupplyChainManagement": "Supply Chain Management",
+  "hardSkillResearchMethods": "Forschungsmethoden",
+  "hardSkillLegalResearch": "Rechtliche Recherche",
+  "hardSkillPolicyResearch": "Politikforschung",
+  "hardSkillArtsResearch": "Kunstforschung",
+  "hardSkillPollingDataAnalysis": "Umfragedatenanalyse",
+  "hardSkillProgramming": "Programmierung",
+  "hardSkillSoftwareDevelopment": "Softwareentwicklung",
+  "hardSkillWebDevelopment": "Webentwicklung",
+  "hardSkillMobileDevelopment": "Mobile Entwicklung",
+  "hardSkillFullStackDevelopment": "Full-Stack-Entwicklung",
+  "hardSkillFrontendDevelopment": "Frontend-Entwicklung",
+  "hardSkillBackendDevelopment": "Backend-Entwicklung",
+  "hardSkillApiDevelopment": "API-Entwicklung",
+  "hardSkillMachineLearning": "Machine Learning",
+  "hardSkillDeepLearning": "Deep Learning",
+  "hardSkillDataScience": "Data Science",
+  "hardSkillBigData": "Big Data",
+  "hardSkillMachineLearningBasics": "Machine Learning Grundlagen",
+  "hardSkillCloudComputing": "Cloud Computing",
+  "hardSkillInfrastructureManagement": "Infrastrukturmanagement",
+  "hardSkillSystemAdministration": "Systemadministration",
+  "hardSkillNetworkAdministration": "Netzwerkadministration",
+  "hardSkillDatabaseAdministration": "Datenbankadministration",
+  "hardSkillDatabaseManagement": "Datenbankmanagement",
+  "hardSkillDatabaseKnowledge": "Datenbankkenntnisse",
+  "hardSkillDataWarehousing": "Data Warehousing",
+  "hardSkillDataMining": "Data Mining",
+  "hardSkillEtlProcesses": "ETL-Prozesse",
+  "hardSkillEngineeringDesign": "Engineering Design",
+  "hardSkillTechnicalDrawing": "Technisches Zeichnen",
+  "hardSkill3dModeling": "3D-Modellierung",
+  "hardSkillProductDesign": "Produktdesign",
+  "hardSkillBusinessIntelligence": "Business Intelligence",
+  "hardSkillDataVisualization": "Datenvisualisierung",
+  "hardSkillDashboardCreation": "Dashboard-Erstellung",
+  "hardSkillReporting": "Berichtswesen",
+  "hardSkillAnalytics": "Analytics",
+  "hardSkillProjectManagement": "Projektmanagement",
+  "hardSkillMicrosoftOffice": "Microsoft Office",
+  "hardSkillSpreadsheetAnalysis": "Tabellenanalyse",
+  "hardSkillPivotTables": "Pivot-Tabellen",
+  "hardSkillFinancialFunctions": "Finanzfunktionen",
+  "hardSkillTaskManagement": "Aufgabenmanagement",
+  "hardSkillWorkflowManagement": "Workflow-Management",
+  "hardSkillDigitalMarketing": "Digitales Marketing",
+  "hardSkillSocialMediaManagement": "Social Media Management",
+  "hardSkillContentCreation": "Content-Erstellung",
+  "hardSkillContentMarketing": "Content Marketing",
+  "hardSkillCrmSystems": "CRM-Systeme",
+  "hardSkillEmailMarketing": "E-Mail-Marketing",
+  "hardSkillMarketingAutomation": "Marketing-Automatisierung",
+  "hardSkillCampaignManagement": "Kampagnenmanagement",
+  "hardSkillGraphicDesign": "Grafikdesign",
+  "hardSkillVisualDesign": "Visuelles Design",
+  "hardSkillVisualCommunication": "Visuelle Kommunikation",
+  "hardSkillBrandDesign": "Markendesign",
+  "hardSkillUiUxDesign": "UI/UX Design",
+  "hardSkillWebDesign": "Webdesign",
+  "hardSkillLogoDesign": "Logo-Design",
+  "hardSkillPrintDesign": "Print-Design",
+  "hardSkillArtificialIntelligence": "Künstliche Intelligenz",
+  "hardSkillPromptEngineering": "Prompt Engineering",
+  "hardSkillAiTools": "KI-Tools",
+  "hardSkillAutomation": "Automatisierung",
+  "hardSkillProcessAutomation": "Prozessautomatisierung",
+
+  "expandAll": "Alle Erweitern",
+  "collapseAll": "Alle Einklappen"
 }
