--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -800,5 +800,143 @@
   "shortQuestionnaireMode": "Quick questionnaire mode",
   "@shortQuestionnaireMode": {
     "description": "Indicates user is in quick/short questionnaire mode"
-  }
+  },
+
+   "softSkillsGroupLeadershipManagement": "Leadership & Management",
+  "softSkillsGroupCommunicationInterpersonal": "Communication & Interpersonal",
+  "softSkillsGroupTeamworkCollaboration": "Teamwork & Collaboration",
+  "softSkillsGroupCognitiveAnalytical": "Cognitive & Analytical",
+  "softSkillsGroupPersonalEffectiveness": "Personal Effectiveness",
+  "softSkillsGroupAdaptabilityGrowth": "Adaptability & Growth",
+  "softSkillsGroupIndependenceSpecialized": "Independence & Specialized",
+  
+  "softSkillLeadership": "Leadership",
+  "softSkillDecisionMaking": "Decision-Making",
+  "softSkillMentoring": "Mentoring",
+  "softSkillAccountability": "Accountability",
+  "softSkillCommunicationSkills": "Communication Skills",
+  "softSkillPublicSpeaking": "Public Speaking",
+  "softSkillInterpersonalSkills": "Interpersonal Skills",
+  "softSkillNetworking": "Networking",
+  "softSkillCollaboration": "Collaboration",
+  "softSkillTeamwork": "Teamwork",
+  "softSkillRelationshipManagement": "Relationship Management",
+  "softSkillCustomerService": "Customer Service",
+  "softSkillCriticalThinking": "Critical Thinking",
+  "softSkillProblemSolvingSkills": "Problem-Solving Skills",
+  "softSkillInnovation": "Innovation",
+  "softSkillCommercialUnderstanding": "Commercial Understanding",
+  "softSkillTimeManagement": "Time Management",
+  "softSkillOrganizationalSkills": "Organizational Skills",
+  "softSkillAttentionToDetail": "Attention to Detail",
+  "softSkillDetailOriented": "Detail Oriented",
+  "softSkillFlexibility": "Flexibility",
+  "softSkillAdaptability": "Adaptability",
+  "softSkillLearning": "Learning",
+  "softSkillContinuousLearning": "Continuous Learning",
+  "softSkillEnthusiasmForLearning": "Enthusiasm for Learning",
+  "softSkillIndependence": "Independence",
+  "softSkillSelfReliance": "Self-Reliance",
+  "softSkillEnthusiasmForPolitics": "Enthusiasm for Politics",
+  "softSkillEnthusiasmForPublicService": "Enthusiasm for Public Service",
+
+  "hardSkillsGroupAnalysisResearch": "Analysis & Research",
+  "hardSkillsGroupProgrammingDevelopment": "Programming & Development",
+  "hardSkillsGroupDataScienceMl": "Data Science & Machine Learning",
+  "hardSkillsGroupCloudInfrastructure": "Cloud & Infrastructure",
+  "hardSkillsGroupDatabaseDataManagement": "Database & Data Management",
+  "hardSkillsGroupDesignEngineeringTools": "Design & Engineering Tools",
+  "hardSkillsGroupBusinessIntelligence": "Business Intelligence & Visualization",
+  "hardSkillsGroupProductivityProjectManagement": "Productivity & Project Management",
+  "hardSkillsGroupMarketingDigitalTools": "Marketing & Digital Tools",
+  "hardSkillsGroupDesignCreativeTools": "Design & Creative Tools",
+  "hardSkillsGroupAiAutomationTools": "AI & Automation Tools",
+  "hardSkillsGroupSpecializedProfessional": "Specialized Professional Skills",
+  "hardSkillsGroupLegalCompliance": "Legal & Compliance",
+  "hardSkillsGroupEngineeringSpecializations": "Engineering Specializations",
+  "hardSkillsGroupCommunicationDocumentation": "Communication & Documentation",
+  "hardSkillsGroupSpecializedManagement": "Specialized Management",
+
+  "hardSkillGeneralAnalysis": "General Analysis",
+  "hardSkillFinancialAnalysis": "Financial Analysis",
+  "hardSkillMarketAnalysis": "Market Analysis",
+  "hardSkillLegalAnalysis": "Legal Analysis",
+  "hardSkillDataAnalysis": "Data Analysis",
+  "hardSkillFinancialModeling": "Financial Modeling",
+  "hardSkillSocialScienceResearch": "Social Science Research",
+  "hardSkillMarketResearch": "Market Research",
+  "hardSkillStatisticalSkills": "Statistical Skills",
+  "hardSkillMathematicalSkills": "Mathematical Skills",
+  "hardSkillStatistics": "Statistics",
+  "hardSkillCalculus": "Calculus",
+  "hardSkillLinearAlgebra": "Linear Algebra",
+  "hardSkillSupplyChainManagement": "Supply Chain Management",
+  "hardSkillResearchMethods": "Research Methods",
+  "hardSkillLegalResearch": "Legal Research",
+  "hardSkillPolicyResearch": "Policy Research",
+  "hardSkillArtsResearch": "Arts Research",
+  "hardSkillPollingDataAnalysis": "Polling Data Analysis",
+  "hardSkillProgramming": "Programming",
+  "hardSkillSoftwareDevelopment": "Software Development",
+  "hardSkillWebDevelopment": "Web Development",
+  "hardSkillMobileDevelopment": "Mobile Development",
+  "hardSkillFullStackDevelopment": "Full-stack Development",
+  "hardSkillFrontendDevelopment": "Frontend Development",
+  "hardSkillBackendDevelopment": "Backend Development",
+  "hardSkillApiDevelopment": "API Development",
+  "hardSkillMachineLearning": "Machine Learning",
+  "hardSkillDeepLearning": "Deep Learning",
+  "hardSkillDataScience": "Data Science",
+  "hardSkillBigData": "Big Data",
+  "hardSkillMachineLearningBasics": "Machine Learning Basics",
+  "hardSkillCloudComputing": "Cloud Computing",
+  "hardSkillInfrastructureManagement": "Infrastructure Management",
+  "hardSkillSystemAdministration": "System Administration",
+  "hardSkillNetworkAdministration": "Network Administration",
+  "hardSkillDatabaseAdministration": "Database Administration",
+  "hardSkillDatabaseManagement": "Database Management",
+  "hardSkillDatabaseKnowledge": "Database Knowledge",
+  "hardSkillDataWarehousing": "Data Warehousing",
+  "hardSkillDataMining": "Data Mining",
+  "hardSkillEtlProcesses": "ETL Processes",
+  "hardSkillEngineeringDesign": "Engineering Design",
+  "hardSkillTechnicalDrawing": "Technical Drawing",
+  "hardSkill3dModeling": "3D Modeling",
+  "hardSkillProductDesign": "Product Design",
+  "hardSkillBusinessIntelligence": "Business Intelligence",
+  "hardSkillDataVisualization": "Data Visualization",
+  "hardSkillDashboardCreation": "Dashboard Creation",
+  "hardSkillReporting": "Reporting",
+  "hardSkillAnalytics": "Analytics",
+  "hardSkillProjectManagement": "Project Management",
+  "hardSkillMicrosoftOffice": "Microsoft Office",
+  "hardSkillSpreadsheetAnalysis": "Spreadsheet Analysis",
+  "hardSkillPivotTables": "Pivot Tables",
+  "hardSkillFinancialFunctions": "Financial Functions",
+  "hardSkillTaskManagement": "Task Management",
+  "hardSkillWorkflowManagement": "Workflow Management",
+  "hardSkillDigitalMarketing": "Digital Marketing",
+  "hardSkillSocialMediaManagement": "Social Media Management",
+  "hardSkillContentCreation": "Content Creation",
+  "hardSkillContentMarketing": "Content Marketing",
+  "hardSkillCrmSystems": "CRM Systems",
+  "hardSkillEmailMarketing": "Email Marketing",
+  "hardSkillMarketingAutomation": "Marketing Automation",
+  "hardSkillCampaignManagement": "Campaign Management",
+  "hardSkillGraphicDesign": "Graphic Design",
+  "hardSkillVisualDesign": "Visual Design",
+  "hardSkillVisualCommunication": "Visual Communication",
+  "hardSkillBrandDesign": "Brand Design",
+  "hardSkillUiUxDesign": "UI/UX Design",
+  "hardSkillWebDesign": "Web Design",
+  "hardSkillLogoDesign": "Logo Design",
+  "hardSkillPrintDesign": "Print Design",
+  "hardSkillArtificialIntelligence": "Artificial Intelligence",
+  "hardSkillPromptEngineering": "Prompt Engineering",
+  "hardSkillAiTools": "AI Tools",
+  "hardSkillAutomation": "Automation",
+  "hardSkillProcessAutomation": "Process Automation",
+
+  "expandAll": "Expand All",
+  "collapseAll": "Collapse All"
 }
