--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -607,5 +607,143 @@
   "switchToSeeAllAnswers": "Cambie a {mode} para ver todas las respuestas.",
   "showingAnswersFor": "Mostrando respuestas de {mode}",
   "completeQuestions": "Completar preguntas",
-  "shortQuestionnaireMode": "Modo cuestionario rápido"
+  "shortQuestionnaireMode": "Modo cuestionario rápido",
+
+   "softSkillsGroupLeadershipManagement": "Liderazgo y Gestión",
+  "softSkillsGroupCommunicationInterpersonal": "Comunicación e Interpersonal",
+  "softSkillsGroupTeamworkCollaboration": "Trabajo en Equipo y Colaboración",
+  "softSkillsGroupCognitiveAnalytical": "Cognitivo y Analítico",
+  "softSkillsGroupPersonalEffectiveness": "Efectividad Personal",
+  "softSkillsGroupAdaptabilityGrowth": "Adaptabilidad y Crecimiento",
+  "softSkillsGroupIndependenceSpecialized": "Independencia y Especializado",
+  
+  "softSkillLeadership": "Liderazgo",
+  "softSkillDecisionMaking": "Toma de Decisiones",
+  "softSkillMentoring": "Mentoría",
+  "softSkillAccountability": "Responsabilidad",
+  "softSkillCommunicationSkills": "Habilidades de Comunicación",
+  "softSkillPublicSpeaking": "Hablar en Público",
+  "softSkillInterpersonalSkills": "Habilidades Interpersonales",
+  "softSkillNetworking": "Networking",
+  "softSkillCollaboration": "Colaboración",
+  "softSkillTeamwork": "Trabajo en Equipo",
+  "softSkillRelationshipManagement": "Gestión de Relaciones",
+  "softSkillCustomerService": "Servicio al Cliente",
+  "softSkillCriticalThinking": "Pensamiento Crítico",
+  "softSkillProblemSolvingSkills": "Habilidades de Resolución de Problemas",
+  "softSkillInnovation": "Innovación",
+  "softSkillCommercialUnderstanding": "Comprensión Comercial",
+  "softSkillTimeManagement": "Gestión del Tiempo",
+  "softSkillOrganizationalSkills": "Habilidades Organizacionales",
+  "softSkillAttentionToDetail": "Atención al Detalle",
+  "softSkillDetailOriented": "Orientado al Detalle",
+  "softSkillFlexibility": "Flexibilidad",
+  "softSkillAdaptability": "Adaptabilidad",
+  "softSkillLearning": "Aprendizaje",
+  "softSkillContinuousLearning": "Aprendizaje Continuo",
+  "softSkillEnthusiasmForLearning": "Entusiasmo por el Aprendizaje",
+  "softSkillIndependence": "Independencia",
+  "softSkillSelfReliance": "Autosuficiencia",
+  "softSkillEnthusiasmForPolitics": "Entusiasmo por la Política",
+  "softSkillEnthusiasmForPublicService": "Entusiasmo por el Servicio Público",
+
+  "hardSkillsGroupAnalysisResearch": "Análisis e Investigación",
+  "hardSkillsGroupProgrammingDevelopment": "Programación y Desarrollo",
+  "hardSkillsGroupDataScienceMl": "Ciencia de Datos y Machine Learning",
+  "hardSkillsGroupCloudInfrastructure": "Nube e Infraestructura",
+  "hardSkillsGroupDatabaseDataManagement": "Base de Datos y Gestión de Datos",
+  "hardSkillsGroupDesignEngineeringTools": "Herramientas de Diseño e Ingeniería",
+  "hardSkillsGroupBusinessIntelligence": "Inteligencia de Negocio y Visualización",
+  "hardSkillsGroupProductivityProjectManagement": "Productividad y Gestión de Proyectos",
+  "hardSkillsGroupMarketingDigitalTools": "Marketing y Herramientas Digitales",
+  "hardSkillsGroupDesignCreativeTools": "Herramientas de Diseño y Creatividad",
+  "hardSkillsGroupAiAutomationTools": "IA y Herramientas de Automatización",
+  "hardSkillsGroupSpecializedProfessional": "Habilidades Profesionales Especializadas",
+  "hardSkillsGroupLegalCompliance": "Legal y Cumplimiento",
+  "hardSkillsGroupEngineeringSpecializations": "Especializaciones de Ingeniería",
+  "hardSkillsGroupCommunicationDocumentation": "Comunicación y Documentación",
+  "hardSkillsGroupSpecializedManagement": "Gestión Especializada",
+
+  "hardSkillGeneralAnalysis": "Análisis General",
+  "hardSkillFinancialAnalysis": "Análisis Financiero",
+  "hardSkillMarketAnalysis": "Análisis de Mercado",
+  "hardSkillLegalAnalysis": "Análisis Legal",
+  "hardSkillDataAnalysis": "Análisis de Datos",
+  "hardSkillFinancialModeling": "Modelado Financiero",
+  "hardSkillSocialScienceResearch": "Investigación en Ciencias Sociales",
+  "hardSkillMarketResearch": "Investigación de Mercado",
+  "hardSkillStatisticalSkills": "Habilidades Estadísticas",
+  "hardSkillMathematicalSkills": "Habilidades Matemáticas",
+  "hardSkillStatistics": "Estadística",
+  "hardSkillCalculus": "Cálculo",
+  "hardSkillLinearAlgebra": "Álgebra Lineal",
+  "hardSkillSupplyChainManagement": "Gestión de Cadena de Suministro",
+  "hardSkillResearchMethods": "Métodos de Investigación",
+  "hardSkillLegalResearch": "Investigación Legal",
+  "hardSkillPolicyResearch": "Investigación de Políticas",
+  "hardSkillArtsResearch": "Investigación Artística",
+  "hardSkillPollingDataAnalysis": "Análisis de Datos de Encuestas",
+  "hardSkillProgramming": "Programación",
+  "hardSkillSoftwareDevelopment": "Desarrollo de Software",
+  "hardSkillWebDevelopment": "Desarrollo Web",
+  "hardSkillMobileDevelopment": "Desarrollo Móvil",
+  "hardSkillFullStackDevelopment": "Desarrollo Full-Stack",
+  "hardSkillFrontendDevelopment": "Desarrollo Frontend",
+  "hardSkillBackendDevelopment": "Desarrollo Backend",
+  "hardSkillApiDevelopment": "Desarrollo de API",
+  "hardSkillMachineLearning": "Aprendizaje Automático",
+  "hardSkillDeepLearning": "Aprendizaje Profundo",
+  "hardSkillDataScience": "Ciencia de Datos",
+  "hardSkillBigData": "Big Data",
+  "hardSkillMachineLearningBasics": "Fundamentos de Machine Learning",
+  "hardSkillCloudComputing": "Computación en la Nube",
+  "hardSkillInfrastructureManagement": "Gestión de Infraestructura",
+  "hardSkillSystemAdministration": "Administración de Sistemas",
+  "hardSkillNetworkAdministration": "Administración de Redes",
+  "hardSkillDatabaseAdministration": "Administración de Bases de Datos",
+  "hardSkillDatabaseManagement": "Gestión de Bases de Datos",
+  "hardSkillDatabaseKnowledge": "Conocimiento de Bases de Datos",
+  "hardSkillDataWarehousing": "Almacenamiento de Datos",
+  "hardSkillDataMining": "Minería de Datos",
+  "hardSkillEtlProcesses": "Procesos ETL",
+  "hardSkillEngineeringDesign": "Diseño de Ingeniería",
+  "hardSkillTechnicalDrawing": "Dibujo Técnico",
+  "hardSkill3dModeling": "Modelado 3D",
+  "hardSkillProductDesign": "Diseño de Producto",
+  "hardSkillBusinessIntelligence": "Inteligencia de Negocio",
+  "hardSkillDataVisualization": "Visualización de Datos",
+  "hardSkillDashboardCreation": "Creación de Dashboards",
+  "hardSkillReporting": "Reportes",
+  "hardSkillAnalytics": "Analítica",
+  "hardSkillProjectManagement": "Gestión de Proyectos",
+  "hardSkillMicrosoftOffice": "Microsoft Office",
+  "hardSkillSpreadsheetAnalysis": "Análisis de Hojas de Cálculo",
+  "hardSkillPivotTables": "Tablas Dinámicas",
+  "hardSkillFinancialFunctions": "Funciones Financieras",
+  "hardSkillTaskManagement": "Gestión de Tareas",
+  "hardSkillWorkflowManagement": "Gestión de Flujo de Trabajo",
+  "hardSkillDigitalMarketing": "Marketing Digital",
+  "hardSkillSocialMediaManagement": "Gestión de Redes Sociales",
+  "hardSkillContentCreation": "Creación de Contenido",
+  "hardSkillContentMarketing": "Marketing de Contenidos",
+  "hardSkillCrmSystems": "Sistemas CRM",
+  "hardSkillEmailMarketing": "Email Marketing",
+  "hardSkillMarketingAutomation": "Automatización de Marketing",
+  "hardSkillCampaignManagement": "Gestión de Campañas",
+  "hardSkillGraphicDesign": "Diseño Gráfico",
+  "hardSkillVisualDesign": "Diseño Visual",
+  "hardSkillVisualCommunication": "Comunicación Visual",
+  "hardSkillBrandDesign": "Diseño de Marca",
+  "hardSkillUiUxDesign": "Diseño UI/UX",
+  "hardSkillWebDesign": "Diseño Web",
+  "hardSkillLogoDesign": "Diseño de Logo",
+  "hardSkillPrintDesign": "Diseño Impreso",
+  "hardSkillArtificialIntelligence": "Inteligencia Artificial",
+  "hardSkillPromptEngineering": "Ingeniería de Prompts",
+  "hardSkillAiTools": "Herramientas de IA",
+  "hardSkillAutomation": "Automatización",
+  "hardSkillProcessAutomation": "Automatización de Procesos",
+
+  "expandAll": "Expandir Todo",
+  "collapseAll": "Contraer Todo"
 }
