--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -609,5 +609,143 @@
   "showingAnswersFor": "Affichage des réponses {mode}",
   "completeQuestions": "Compléter les questions",
 
-  "shortQuestionnaireMode": "Mode questionnaire rapide"
+  "shortQuestionnaireMode": "Mode questionnaire rapide",
+
+  "softSkillsGroupLeadershipManagement": "Leadership et Gestion",
+  "softSkillsGroupCommunicationInterpersonal": "Communication et Interpersonnel",
+  "softSkillsGroupTeamworkCollaboration": "Travail d'équipe et Collaboration",
+  "softSkillsGroupCognitiveAnalytical": "Cognitif et Analytique",
+  "softSkillsGroupPersonalEffectiveness": "Efficacité Personnelle",
+  "softSkillsGroupAdaptabilityGrowth": "Adaptabilité et Croissance",
+  "softSkillsGroupIndependenceSpecialized": "Indépendance et Spécialisé",
+  
+  "softSkillLeadership": "Leadership",
+  "softSkillDecisionMaking": "Prise de Décision",
+  "softSkillMentoring": "Mentorat",
+  "softSkillAccountability": "Responsabilité",
+  "softSkillCommunicationSkills": "Compétences en Communication",
+  "softSkillPublicSpeaking": "Prise de Parole en Public",
+  "softSkillInterpersonalSkills": "Compétences Interpersonnelles",
+  "softSkillNetworking": "Réseautage",
+  "softSkillCollaboration": "Collaboration",
+  "softSkillTeamwork": "Travail d'équipe",
+  "softSkillRelationshipManagement": "Gestion des Relations",
+  "softSkillCustomerService": "Service Client",
+  "softSkillCriticalThinking": "Pensée Critique",
+  "softSkillProblemSolvingSkills": "Compétences en Résolution de Problèmes",
+  "softSkillInnovation": "Innovation",
+  "softSkillCommercialUnderstanding": "Compréhension Commerciale",
+  "softSkillTimeManagement": "Gestion du Temps",
+  "softSkillOrganizationalSkills": "Compétences Organisationnelles",
+  "softSkillAttentionToDetail": "Attention aux Détails",
+  "softSkillDetailOriented": "Orienté Détails",
+  "softSkillFlexibility": "Flexibilité",
+  "softSkillAdaptability": "Adaptabilité",
+  "softSkillLearning": "Apprentissage",
+  "softSkillContinuousLearning": "Apprentissage Continu",
+  "softSkillEnthusiasmForLearning": "Enthousiasme pour l'Apprentissage",
+  "softSkillIndependence": "Indépendance",
+  "softSkillSelfReliance": "Autonomie",
+  "softSkillEnthusiasmForPolitics": "Enthousiasme pour la Politique",
+  "softSkillEnthusiasmForPublicService": "Enthousiasme pour le Service Public",
+
+  "hardSkillsGroupAnalysisResearch": "Analyse et Recherche",
+  "hardSkillsGroupProgrammingDevelopment": "Programmation et Développement",
+  "hardSkillsGroupDataScienceMl": "Science des Données et Machine Learning",
+  "hardSkillsGroupCloudInfrastructure": "Cloud et Infrastructure",
+  "hardSkillsGroupDatabaseDataManagement": "Base de Données et Gestion des Données",
+  "hardSkillsGroupDesignEngineeringTools": "Outils de Conception et d'Ingénierie",
+  "hardSkillsGroupBusinessIntelligence": "Intelligence d'Affaires et Visualisation",
+  "hardSkillsGroupProductivityProjectManagement": "Productivité et Gestion de Projet",
+  "hardSkillsGroupMarketingDigitalTools": "Marketing et Outils Numériques",
+  "hardSkillsGroupDesignCreativeTools": "Outils de Conception et Créatifs",
+  "hardSkillsGroupAiAutomationTools": "IA et Outils d'Automatisation",
+  "hardSkillsGroupSpecializedProfessional": "Compétences Professionnelles Spécialisées",
+  "hardSkillsGroupLegalCompliance": "Juridique et Conformité",
+  "hardSkillsGroupEngineeringSpecializations": "Spécialisations en Ingénierie",
+  "hardSkillsGroupCommunicationDocumentation": "Communication et Documentation",
+  "hardSkillsGroupSpecializedManagement": "Gestion Spécialisée",
+
+  "hardSkillGeneralAnalysis": "Analyse Générale",
+  "hardSkillFinancialAnalysis": "Analyse Financière",
+  "hardSkillMarketAnalysis": "Analyse de Marché",
+  "hardSkillLegalAnalysis": "Analyse Juridique",
+  "hardSkillDataAnalysis": "Analyse de Données",
+  "hardSkillFinancialModeling": "Modélisation Financière",
+  "hardSkillSocialScienceResearch": "Recherche en Sciences Sociales",
+  "hardSkillMarketResearch": "Études de Marché",
+  "hardSkillStatisticalSkills": "Compétences Statistiques",
+  "hardSkillMathematicalSkills": "Compétences Mathématiques",
+  "hardSkillStatistics": "Statistiques",
+  "hardSkillCalculus": "Calcul",
+  "hardSkillLinearAlgebra": "Algèbre Linéaire",
+  "hardSkillSupplyChainManagement": "Gestion de la Chaîne d'Approvisionnement",
+  "hardSkillResearchMethods": "Méthodes de Recherche",
+  "hardSkillLegalResearch": "Recherche Juridique",
+  "hardSkillPolicyResearch": "Recherche en Politique",
+  "hardSkillArtsResearch": "Recherche Artistique",
+  "hardSkillPollingDataAnalysis": "Analyse de Données de Sondage",
+  "hardSkillProgramming": "Programmation",
+  "hardSkillSoftwareDevelopment": "Développement Logiciel",
+  "hardSkillWebDevelopment": "Développement Web",
+  "hardSkillMobileDevelopment": "Développement Mobile",
+  "hardSkillFullStackDevelopment": "Développement Full-Stack",
+  "hardSkillFrontendDevelopment": "Développement Frontend",
+  "hardSkillBackendDevelopment": "Développement Backend",
+  "hardSkillApiDevelopment": "Développement d'API",
+  "hardSkillMachineLearning": "Apprentissage Automatique",
+  "hardSkillDeepLearning": "Apprentissage Profond",
+  "hardSkillDataScience": "Science des Données",
+  "hardSkillBigData": "Big Data",
+  "hardSkillMachineLearningBasics": "Bases du Machine Learning",
+  "hardSkillCloudComputing": "Informatique en Nuage",
+  "hardSkillInfrastructureManagement": "Gestion d'Infrastructure",
+  "hardSkillSystemAdministration": "Administration Système",
+  "hardSkillNetworkAdministration": "Administration Réseau",
+  "hardSkillDatabaseAdministration": "Administration de Base de Données",
+  "hardSkillDatabaseManagement": "Gestion de Base de Données",
+  "hardSkillDatabaseKnowledge": "Connaissance des Bases de Données",
+  "hardSkillDataWarehousing": "Entrepôt de Données",
+  "hardSkillDataMining": "Exploration de Données",
+  "hardSkillEtlProcesses": "Processus ETL",
+  "hardSkillEngineeringDesign": "Conception d'Ingénierie",
+  "hardSkillTechnicalDrawing": "Dessin Technique",
+  "hardSkill3dModeling": "Modélisation 3D",
+  "hardSkillProductDesign": "Conception de Produit",
+  "hardSkillBusinessIntelligence": "Intelligence d'Affaires",
+  "hardSkillDataVisualization": "Visualisation de Données",
+  "hardSkillDashboardCreation": "Création de Tableaux de Bord",
+  "hardSkillReporting": "Rapports",
+  "hardSkillAnalytics": "Analytique",
+  "hardSkillProjectManagement": "Gestion de Projet",
+  "hardSkillMicrosoftOffice": "Microsoft Office",
+  "hardSkillSpreadsheetAnalysis": "Analyse de Feuilles de Calcul",
+  "hardSkillPivotTables": "Tableaux Croisés Dynamiques",
+  "hardSkillFinancialFunctions": "Fonctions Financières",
+  "hardSkillTaskManagement": "Gestion des Tâches",
+  "hardSkillWorkflowManagement": "Gestion de Flux de Travail",
+  "hardSkillDigitalMarketing": "Marketing Numérique",
+  "hardSkillSocialMediaManagement": "Gestion des Médias Sociaux",
+  "hardSkillContentCreation": "Création de Contenu",
+  "hardSkillContentMarketing": "Marketing de Contenu",
+  "hardSkillCrmSystems": "Systèmes CRM",
+  "hardSkillEmailMarketing": "Email Marketing",
+  "hardSkillMarketingAutomation": "Automatisation Marketing",
+  "hardSkillCampaignManagement": "Gestion de Campagne",
+  "hardSkillGraphicDesign": "Design Graphique",
+  "hardSkillVisualDesign": "Design Visuel",
+  "hardSkillVisualCommunication": "Communication Visuelle",
+  "hardSkillBrandDesign": "Design de Marque",
+  "hardSkillUiUxDesign": "Design UI/UX",
+  "hardSkillWebDesign": "Design Web",
+  "hardSkillLogoDesign": "Design de Logo",
+  "hardSkillPrintDesign": "Design d'Impression",
+  "hardSkillArtificialIntelligence": "Intelligence Artificielle",
+  "hardSkillPromptEngineering": "Ingénierie de Prompts",
+  "hardSkillAiTools": "Outils IA",
+  "hardSkillAutomation": "Automatisation",
+  "hardSkillProcessAutomation": "Automatisation de Processus",
+
+  "expandAll": "Tout Développer",
+  "collapseAll": "Tout Réduire"
 }
