--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -608,5 +608,143 @@
   "showingAnswersFor": "Mostrando risposte {mode}",
   "completeQuestions": "Completa domande",
 
-  "shortQuestionnaireMode": "Modalità questionario veloce"
+  "shortQuestionnaireMode": "Modalità questionario veloce",
+
+   "softSkillsGroupLeadershipManagement": "Leadership e Gestione",
+  "softSkillsGroupCommunicationInterpersonal": "Comunicazione e Interpersonale",
+  "softSkillsGroupTeamworkCollaboration": "Lavoro di Squadra e Collaborazione",
+  "softSkillsGroupCognitiveAnalytical": "Cognitivo e Analitico",
+  "softSkillsGroupPersonalEffectiveness": "Efficacia Personale",
+  "softSkillsGroupAdaptabilityGrowth": "Adattabilità e Crescita",
+  "softSkillsGroupIndependenceSpecialized": "Indipendenza e Specializzato",
+  
+  "softSkillLeadership": "Leadership",
+  "softSkillDecisionMaking": "Presa di Decisioni",
+  "softSkillMentoring": "Mentoring",
+  "softSkillAccountability": "Responsabilità",
+  "softSkillCommunicationSkills": "Competenze Comunicative",
+  "softSkillPublicSpeaking": "Parlare in Pubblico",
+  "softSkillInterpersonalSkills": "Competenze Interpersonali",
+  "softSkillNetworking": "Networking",
+  "softSkillCollaboration": "Collaborazione",
+  "softSkillTeamwork": "Lavoro di Squadra",
+  "softSkillRelationshipManagement": "Gestione delle Relazioni",
+  "softSkillCustomerService": "Servizio Clienti",
+  "softSkillCriticalThinking": "Pensiero Critico",
+  "softSkillProblemSolvingSkills": "Competenze nella Risoluzione dei Problemi",
+  "softSkillInnovation": "Innovazione",
+  "softSkillCommercialUnderstanding": "Comprensione Commerciale",
+  "softSkillTimeManagement": "Gestione del Tempo",
+  "softSkillOrganizationalSkills": "Competenze Organizzative",
+  "softSkillAttentionToDetail": "Attenzione ai Dettagli",
+  "softSkillDetailOriented": "Orientato ai Dettagli",
+  "softSkillFlexibility": "Flessibilità",
+  "softSkillAdaptability": "Adattabilità",
+  "softSkillLearning": "Apprendimento",
+  "softSkillContinuousLearning": "Apprendimento Continuo",
+  "softSkillEnthusiasmForLearning": "Entusiasmo per l'Apprendimento",
+  "softSkillIndependence": "Indipendenza",
+  "softSkillSelfReliance": "Autosufficienza",
+  "softSkillEnthusiasmForPolitics": "Entusiasmo per la Politica",
+  "softSkillEnthusiasmForPublicService": "Entusiasmo per il Servizio Pubblico",
+
+  "hardSkillsGroupAnalysisResearch": "Analisi e Ricerca",
+  "hardSkillsGroupProgrammingDevelopment": "Programmazione e Sviluppo",
+  "hardSkillsGroupDataScienceMl": "Data Science e Machine Learning",
+  "hardSkillsGroupCloudInfrastructure": "Cloud e Infrastruttura",
+  "hardSkillsGroupDatabaseDataManagement": "Database e Gestione Dati",
+  "hardSkillsGroupDesignEngineeringTools": "Strumenti di Design e Ingegneria",
+  "hardSkillsGroupBusinessIntelligence": "Business Intelligence e Visualizzazione",
+  "hardSkillsGroupProductivityProjectManagement": "Produttività e Gestione Progetti",
+  "hardSkillsGroupMarketingDigitalTools": "Marketing e Strumenti Digitali",
+  "hardSkillsGroupDesignCreativeTools": "Strumenti di Design e Creativi",
+  "hardSkillsGroupAiAutomationTools": "IA e Strumenti di Automazione",
+  "hardSkillsGroupSpecializedProfessional": "Competenze Professionali Specializzate",
+  "hardSkillsGroupLegalCompliance": "Legale e Conformità",
+  "hardSkillsGroupEngineeringSpecializations": "Specializzazioni Ingegneristiche",
+  "hardSkillsGroupCommunicationDocumentation": "Comunicazione e Documentazione",
+  "hardSkillsGroupSpecializedManagement": "Gestione Specializzata",
+
+  "hardSkillGeneralAnalysis": "Analisi Generale",
+  "hardSkillFinancialAnalysis": "Analisi Finanziaria",
+  "hardSkillMarketAnalysis": "Analisi di Mercato",
+  "hardSkillLegalAnalysis": "Analisi Legale",
+  "hardSkillDataAnalysis": "Analisi dei Dati",
+  "hardSkillFinancialModeling": "Modellazione Finanziaria",
+  "hardSkillSocialScienceResearch": "Ricerca in Scienze Sociali",
+  "hardSkillMarketResearch": "Ricerca di Mercato",
+  "hardSkillStatisticalSkills": "Competenze Statistiche",
+  "hardSkillMathematicalSkills": "Competenze Matematiche",
+  "hardSkillStatistics": "Statistica",
+  "hardSkillCalculus": "Calcolo",
+  "hardSkillLinearAlgebra": "Algebra Lineare",
+  "hardSkillSupplyChainManagement": "Gestione della Catena di Fornitura",
+  "hardSkillResearchMethods": "Metodi di Ricerca",
+  "hardSkillLegalResearch": "Ricerca Legale",
+  "hardSkillPolicyResearch": "Ricerca Politica",
+  "hardSkillArtsResearch": "Ricerca Artistica",
+  "hardSkillPollingDataAnalysis": "Analisi Dati di Sondaggio",
+  "hardSkillProgramming": "Programmazione",
+  "hardSkillSoftwareDevelopment": "Sviluppo Software",
+  "hardSkillWebDevelopment": "Sviluppo Web",
+  "hardSkillMobileDevelopment": "Sviluppo Mobile",
+  "hardSkillFullStackDevelopment": "Sviluppo Full-Stack",
+  "hardSkillFrontendDevelopment": "Sviluppo Frontend",
+  "hardSkillBackendDevelopment": "Sviluppo Backend",
+  "hardSkillApiDevelopment": "Sviluppo API",
+  "hardSkillMachineLearning": "Machine Learning",
+  "hardSkillDeepLearning": "Deep Learning",
+  "hardSkillDataScience": "Data Science",
+  "hardSkillBigData": "Big Data",
+  "hardSkillMachineLearningBasics": "Fondamenti di Machine Learning",
+  "hardSkillCloudComputing": "Cloud Computing",
+  "hardSkillInfrastructureManagement": "Gestione Infrastruttura",
+  "hardSkillSystemAdministration": "Amministrazione di Sistema",
+  "hardSkillNetworkAdministration": "Amministrazione di Rete",
+  "hardSkillDatabaseAdministration": "Amministrazione Database",
+  "hardSkillDatabaseManagement": "Gestione Database",
+  "hardSkillDatabaseKnowledge": "Conoscenza Database",
+  "hardSkillDataWarehousing": "Data Warehousing",
+  "hardSkillDataMining": "Data Mining",
+  "hardSkillEtlProcesses": "Processi ETL",
+  "hardSkillEngineeringDesign": "Design Ingegneristico",
+  "hardSkillTechnicalDrawing": "Disegno Tecnico",
+  "hardSkill3dModeling": "Modellazione 3D",
+  "hardSkillProductDesign": "Design del Prodotto",
+  "hardSkillBusinessIntelligence": "Business Intelligence",
+  "hardSkillDataVisualization": "Visualizzazione Dati",
+  "hardSkillDashboardCreation": "Creazione Dashboard",
+  "hardSkillReporting": "Reportistica",
+  "hardSkillAnalytics": "Analytics",
+  "hardSkillProjectManagement": "Gestione Progetti",
+  "hardSkillMicrosoftOffice": "Microsoft Office",
+  "hardSkillSpreadsheetAnalysis": "Analisi Fogli di Calcolo",
+  "hardSkillPivotTables": "Tabelle Pivot",
+  "hardSkillFinancialFunctions": "Funzioni Finanziarie",
+  "hardSkillTaskManagement": "Gestione Attività",
+  "hardSkillWorkflowManagement": "Gestione Flussi di Lavoro",
+  "hardSkillDigitalMarketing": "Marketing Digitale",
+  "hardSkillSocialMediaManagement": "Gestione Social Media",
+  "hardSkillContentCreation": "Creazione Contenuti",
+  "hardSkillContentMarketing": "Content Marketing",
+  "hardSkillCrmSystems": "Sistemi CRM",
+  "hardSkillEmailMarketing": "Email Marketing",
+  "hardSkillMarketingAutomation": "Automazione Marketing",
+  "hardSkillCampaignManagement": "Gestione Campagne",
+  "hardSkillGraphicDesign": "Design Grafico",
+  "hardSkillVisualDesign": "Design Visivo",
+  "hardSkillVisualCommunication": "Comunicazione Visiva",
+  "hardSkillBrandDesign": "Design del Brand",
+  "hardSkillUiUxDesign": "Design UI/UX",
+  "hardSkillWebDesign": "Web Design",
+  "hardSkillLogoDesign": "Design Logo",
+  "hardSkillPrintDesign": "Design Stampa",
+  "hardSkillArtificialIntelligence": "Intelligenza Artificiale",
+  "hardSkillPromptEngineering": "Prompt Engineering",
+  "hardSkillAiTools": "Strumenti IA",
+  "hardSkillAutomation": "Automazione",
+  "hardSkillProcessAutomation": "Automazione Processi",
+
+  "expandAll": "Espandi Tutto",
+  "collapseAll": "Comprimi Tutto"
 }
