--- a/lib/l10n/app_nl.arb
+++ b/lib/l10n/app_nl.arb
@@ -608,5 +608,143 @@
   "showingAnswersFor": "{mode} antwoorden tonen",
   "completeQuestions": "Vragen voltooien",
 
-  "shortQuestionnaireMode": "Snelle vragenlijst modus"
+  "shortQuestionnaireMode": "Snelle vragenlijst modus",
+  
+  "softSkillsGroupLeadershipManagement": "Leiderschap & Management",
+  "softSkillsGroupCommunicationInterpersonal": "Communicatie & Interpersoonlijk",
+  "softSkillsGroupTeamworkCollaboration": "Teamwork & Samenwerking",
+  "softSkillsGroupCognitiveAnalytical": "Cognitief & Analytisch",
+  "softSkillsGroupPersonalEffectiveness": "Persoonlijke Effectiviteit",
+  "softSkillsGroupAdaptabilityGrowth": "Aanpassingsvermogen & Groei",
+  "softSkillsGroupIndependenceSpecialized": "Onafhankelijkheid & Gespecialiseerd",
+  
+  "softSkillLeadership": "Leiderschap",
+  "softSkillDecisionMaking": "Besluitvorming",
+  "softSkillMentoring": "Mentoring",
+  "softSkillAccountability": "Verantwoordelijkheid",
+  "softSkillCommunicationSkills": "Communicatievaardigheden",
+  "softSkillPublicSpeaking": "Spreken in het Openbaar",
+  "softSkillInterpersonalSkills": "Interpersoonlijke Vaardigheden",
+  "softSkillNetworking": "Netwerken",
+  "softSkillCollaboration": "Samenwerking",
+  "softSkillTeamwork": "Teamwork",
+  "softSkillRelationshipManagement": "Relatiebeheer",
+  "softSkillCustomerService": "Klantenservice",
+  "softSkillCriticalThinking": "Kritisch Denken",
+  "softSkillProblemSolvingSkills": "Probleemoplossende Vaardigheden",
+  "softSkillInnovation": "Innovatie",
+  "softSkillCommercialUnderstanding": "Commercieel Begrip",
+  "softSkillTimeManagement": "Tijdmanagement",
+  "softSkillOrganizationalSkills": "Organisatorische Vaardigheden",
+  "softSkillAttentionToDetail": "Aandacht voor Detail",
+  "softSkillDetailOriented": "Detailgericht",
+  "softSkillFlexibility": "Flexibiliteit",
+  "softSkillAdaptability": "Aanpassingsvermogen",
+  "softSkillLearning": "Leren",
+  "softSkillContinuousLearning": "Continu Leren",
+  "softSkillEnthusiasmForLearning": "Enthousiasme voor Leren",
+  "softSkillIndependence": "Onafhankelijkheid",
+  "softSkillSelfReliance": "Zelfredzaamheid",
+  "softSkillEnthusiasmForPolitics": "Enthousiasme voor Politiek",
+  "softSkillEnthusiasmForPublicService": "Enthousiasme voor Openbare Dienst",
+
+  "hardSkillWebDesign": "Webdesign",
+  "hardSkillLogoDesign": "Logo Ontwerp",
+  "hardSkillPrintDesign": "Print Ontwerp",
+  "hardSkillArtificialIntelligence": "Kunstmatige Intelligentie",
+  "hardSkillPromptEngineering": "Prompt Engineering",
+  "hardSkillAiTools": "AI Tools",
+  "hardSkillAutomation": "Automatisering",
+  "hardSkillProcessAutomation": "Procesautomatisering",
+  "hardSkillsGroupAnalysisResearch": "Analyse & Onderzoek",
+  "hardSkillsGroupProgrammingDevelopment": "Programmeren & Ontwikkeling",
+  "hardSkillsGroupDataScienceMl": "Data Science & Machine Learning",
+  "hardSkillsGroupCloudInfrastructure": "Cloud & Infrastructuur",
+  "hardSkillsGroupDatabaseDataManagement": "Database & Databeheer",
+  "hardSkillsGroupDesignEngineeringTools": "Design & Engineering Tools",
+  "hardSkillsGroupBusinessIntelligence": "Business Intelligence & Visualisatie",
+  "hardSkillsGroupProductivityProjectManagement": "Productiviteit & Projectmanagement",
+  "hardSkillsGroupMarketingDigitalTools": "Marketing & Digitale Tools",
+  "hardSkillsGroupDesignCreativeTools": "Design & Creatieve Tools",
+  "hardSkillsGroupAiAutomationTools": "AI & Automatiseringstools",
+  "hardSkillsGroupSpecializedProfessional": "Gespecialiseerde Professionele Vaardigheden",
+  "hardSkillsGroupLegalCompliance": "Juridisch & Compliance",
+  "hardSkillsGroupEngineeringSpecializations": "Engineering Specialisaties",
+  "hardSkillsGroupCommunicationDocumentation": "Communicatie & Documentatie",
+  "hardSkillsGroupSpecializedManagement": "Gespecialiseerd Management",
+
+  "hardSkillGeneralAnalysis": "Algemene Analyse",
+  "hardSkillFinancialAnalysis": "Financiële Analyse",
+  "hardSkillMarketAnalysis": "Marktanalyse",
+  "hardSkillLegalAnalysis": "Juridische Analyse",
+  "hardSkillDataAnalysis": "Data-analyse",
+  "hardSkillFinancialModeling": "Financiële Modellering",
+  "hardSkillSocialScienceResearch": "Sociaalwetenschappelijk Onderzoek",
+  "hardSkillMarketResearch": "Marktonderzoek",
+  "hardSkillStatisticalSkills": "Statistische Vaardigheden",
+  "hardSkillMathematicalSkills": "Wiskundige Vaardigheden",
+  "hardSkillStatistics": "Statistiek",
+  "hardSkillCalculus": "Calculus",
+  "hardSkillLinearAlgebra": "Lineaire Algebra",
+  "hardSkillSupplyChainManagement": "Supply Chain Management",
+  "hardSkillResearchMethods": "Onderzoeksmethoden",
+  "hardSkillLegalResearch": "Juridisch Onderzoek",
+  "hardSkillPolicyResearch": "Beleidsonderzoek",
+  "hardSkillArtsResearch": "Kunstonderzoek",
+  "hardSkillPollingDataAnalysis": "Enquêtedata-analyse",
+  "hardSkillProgramming": "Programmeren",
+  "hardSkillSoftwareDevelopment": "Software-ontwikkeling",
+  "hardSkillWebDevelopment": "Webontwikkeling",
+  "hardSkillMobileDevelopment": "Mobiele Ontwikkeling",
+  "hardSkillFullStackDevelopment": "Full-Stack Ontwikkeling",
+  "hardSkillFrontendDevelopment": "Frontend Ontwikkeling",
+  "hardSkillBackendDevelopment": "Backend Ontwikkeling",
+  "hardSkillApiDevelopment": "API Ontwikkeling",
+  "hardSkillMachineLearning": "Machine Learning",
+  "hardSkillDeepLearning": "Deep Learning",
+  "hardSkillDataScience": "Data Science",
+  "hardSkillBigData": "Big Data",
+  "hardSkillMachineLearningBasics": "Machine Learning Basics",
+  "hardSkillCloudComputing": "Cloud Computing",
+  "hardSkillInfrastructureManagement": "Infrastructuurbeheer",
+  "hardSkillSystemAdministration": "Systeembeheer",
+  "hardSkillNetworkAdministration": "Netwerkbeheer",
+  "hardSkillDatabaseAdministration": "Databasebeheer",
+  "hardSkillDatabaseManagement": "Databasemanagement",
+  "hardSkillDatabaseKnowledge": "Databasekennis",
+  "hardSkillDataWarehousing": "Data Warehousing",
+  "hardSkillDataMining": "Data Mining",
+  "hardSkillEtlProcesses": "ETL Processen",
+  "hardSkillEngineeringDesign": "Engineering Design",
+  "hardSkillTechnicalDrawing": "Technisch Tekenen",
+  "hardSkill3dModeling": "3D Modellering",
+  "hardSkillProductDesign": "Productdesign",
+  "hardSkillBusinessIntelligence": "Business Intelligence",
+  "hardSkillDataVisualization": "Datavisualisatie",
+  "hardSkillDashboardCreation": "Dashboard Creatie",
+  "hardSkillReporting": "Rapportage",
+  "hardSkillAnalytics": "Analytics",
+  "hardSkillProjectManagement": "Projectmanagement",
+  "hardSkillMicrosoftOffice": "Microsoft Office",
+  "hardSkillSpreadsheetAnalysis": "Spreadsheet Analyse",
+  "hardSkillPivotTables": "Draaitabellen",
+  "hardSkillFinancialFunctions": "Financiële Functies",
+  "hardSkillTaskManagement": "Takenbeheer",
+  "hardSkillWorkflowManagement": "Workflowbeheer",
+  "hardSkillDigitalMarketing": "Digitale Marketing",
+  "hardSkillSocialMediaManagement": "Social Media Management",
+  "hardSkillContentCreation": "Content Creatie",
+  "hardSkillContentMarketing": "Content Marketing",
+  "hardSkillCrmSystems": "CRM Systemen",
+  "hardSkillEmailMarketing": "E-mail Marketing",
+  "hardSkillMarketingAutomation": "Marketing Automatisering",
+  "hardSkillCampaignManagement": "Campagnebeheer",
+  "hardSkillGraphicDesign": "Grafisch Ontwerp",
+  "hardSkillVisualDesign": "Visueel Ontwerp",
+  "hardSkillVisualCommunication": "Visuele Communicatie",
+  "hardSkillBrandDesign": "Merkontwerp",
+  "hardSkillUiUxDesign": "UI/UX Design",
+
+  "expandAll": "Alles Uitklappen",
+  "collapseAll": "Alles Inklappen"
 }
