--- a/lib/l10n/app_ro.arb
+++ b/lib/l10n/app_ro.arb
@@ -609,5 +609,143 @@
   "showingAnswersFor": "Se afișează răspunsurile {mode}",
   "completeQuestions": "Completați întrebările",
 
-  "shortQuestionnaireMode": "Modul chestionar rapid"
+  "shortQuestionnaireMode": "Modul chestionar rapid",
+
+    "softSkillsGroupLeadershipManagement": "Leadership și Management",
+  "softSkillsGroupCommunicationInterpersonal": "Comunicare și Interpersonal",
+  "softSkillsGroupTeamworkCollaboration": "Muncă în Echipă și Colaborare",
+  "softSkillsGroupCognitiveAnalytical": "Cognitiv și Analitic",
+  "softSkillsGroupPersonalEffectiveness": "Eficiență Personală",
+  "softSkillsGroupAdaptabilityGrowth": "Adaptabilitate și Creștere",
+  "softSkillsGroupIndependenceSpecialized": "Independență și Specializat",
+  
+  "softSkillLeadership": "Leadership",
+  "softSkillDecisionMaking": "Luarea Deciziilor",
+  "softSkillMentoring": "Mentoring",
+  "softSkillAccountability": "Responsabilitate",
+  "softSkillCommunicationSkills": "Abilități de Comunicare",
+  "softSkillPublicSpeaking": "Vorbire în Public",
+  "softSkillInterpersonalSkills": "Abilități Interpersonale",
+  "softSkillNetworking": "Networking",
+  "softSkillCollaboration": "Colaborare",
+  "softSkillTeamwork": "Muncă în Echipă",
+  "softSkillRelationshipManagement": "Managementul Relațiilor",
+  "softSkillCustomerService": "Serviciu Clienți",
+  "softSkillCriticalThinking": "Gândire Critică",
+  "softSkillProblemSolvingSkills": "Abilități de Rezolvare a Problemelor",
+  "softSkillInnovation": "Inovație",
+  "softSkillCommercialUnderstanding": "Înțelegere Comercială",
+  "softSkillTimeManagement": "Managementul Timpului",
+  "softSkillOrganizationalSkills": "Abilități Organizaționale",
+  "softSkillAttentionToDetail": "Atenție la Detalii",
+  "softSkillDetailOriented": "Orientat pe Detalii",
+  "softSkillFlexibility": "Flexibilitate",
+  "softSkillAdaptability": "Adaptabilitate",
+  "softSkillLearning": "Învățare",
+  "softSkillContinuousLearning": "Învățare Continuă",
+  "softSkillEnthusiasmForLearning": "Entuziasm pentru Învățare",
+  "softSkillIndependence": "Independență",
+  "softSkillSelfReliance": "Autonomie",
+  "softSkillEnthusiasmForPolitics": "Entuziasm pentru Politică",
+  "softSkillEnthusiasmForPublicService": "Entuziasm pentru Serviciul Public",
+
+  "hardSkillsGroupAnalysisResearch": "Analiză și Cercetare",
+  "hardSkillsGroupProgrammingDevelopment": "Programare și Dezvoltare",
+  "hardSkillsGroupDataScienceMl": "Data Science și Machine Learning",
+  "hardSkillsGroupCloudInfrastructure": "Cloud și Infrastructură",
+  "hardSkillsGroupDatabaseDataManagement": "Baze de Date și Management Date",
+  "hardSkillsGroupDesignEngineeringTools": "Instrumente Design și Inginerie",
+  "hardSkillsGroupBusinessIntelligence": "Business Intelligence și Vizualizare",
+  "hardSkillsGroupProductivityProjectManagement": "Productivitate și Management Proiecte",
+  "hardSkillsGroupMarketingDigitalTools": "Marketing și Instrumente Digitale",
+  "hardSkillsGroupDesignCreativeTools": "Instrumente Design și Creative",
+  "hardSkillsGroupAiAutomationTools": "IA și Instrumente Automatizare",
+  "hardSkillsGroupSpecializedProfessional": "Abilități Profesionale Specializate",
+  "hardSkillsGroupLegalCompliance": "Legal și Conformitate",
+  "hardSkillsGroupEngineeringSpecializations": "Specializări Inginerie",
+  "hardSkillsGroupCommunicationDocumentation": "Comunicare și Documentare",
+  "hardSkillsGroupSpecializedManagement": "Management Specializat",
+
+  "hardSkillGeneralAnalysis": "Analiză Generală",
+  "hardSkillFinancialAnalysis": "Analiză Financiară",
+  "hardSkillMarketAnalysis": "Analiză de Piață",
+  "hardSkillLegalAnalysis": "Analiză Juridică",
+  "hardSkillDataAnalysis": "Analiză Date",
+  "hardSkillFinancialModeling": "Modelare Financiară",
+  "hardSkillSocialScienceResearch": "Cercetare în Științe Sociale",
+  "hardSkillMarketResearch": "Cercetare de Piață",
+  "hardSkillStatisticalSkills": "Abilități Statistice",
+  "hardSkillMathematicalSkills": "Abilități Matematice",
+  "hardSkillStatistics": "Statistică",
+  "hardSkillCalculus": "Analiză Matematică",
+  "hardSkillLinearAlgebra": "Algebră Liniară",
+  "hardSkillSupplyChainManagement": "Management Lanț de Aprovizionare",
+  "hardSkillResearchMethods": "Metode de Cercetare",
+  "hardSkillLegalResearch": "Cercetare Juridică",
+  "hardSkillPolicyResearch": "Cercetare de Politici",
+  "hardSkillArtsResearch": "Cercetare Artistică",
+  "hardSkillPollingDataAnalysis": "Analiză Date Sondaj",
+  "hardSkillProgramming": "Programare",
+  "hardSkillSoftwareDevelopment": "Dezvoltare Software",
+  "hardSkillWebDevelopment": "Dezvoltare Web",
+  "hardSkillMobileDevelopment": "Dezvoltare Mobile",
+  "hardSkillFullStackDevelopment": "Dezvoltare Full-Stack",
+  "hardSkillFrontendDevelopment": "Dezvoltare Frontend",
+  "hardSkillBackendDevelopment": "Dezvoltare Backend",
+  "hardSkillApiDevelopment": "Dezvoltare API",
+  "hardSkillMachineLearning": "Învățare Automată",
+  "hardSkillDeepLearning": "Învățare Profundă",
+  "hardSkillDataScience": "Știința Datelor",
+  "hardSkillBigData": "Big Data",
+  "hardSkillMachineLearningBasics": "Noțiuni de Bază Machine Learning",
+  "hardSkillCloudComputing": "Cloud Computing",
+  "hardSkillInfrastructureManagement": "Management Infrastructură",
+  "hardSkillSystemAdministration": "Administrare Sistem",
+  "hardSkillNetworkAdministration": "Administrare Rețea",
+  "hardSkillDatabaseAdministration": "Administrare Baze de Date",
+  "hardSkillDatabaseManagement": "Management Baze de Date",
+  "hardSkillDatabaseKnowledge": "Cunoștințe Baze de Date",
+  "hardSkillDataWarehousing": "Depozitare Date",
+  "hardSkillDataMining": "Minerit Date",
+  "hardSkillEtlProcesses": "Procese ETL",
+  "hardSkillEngineeringDesign": "Design Inginerie",
+  "hardSkillTechnicalDrawing": "Desen Tehnic",
+  "hardSkill3dModeling": "Modelare 3D",
+  "hardSkillProductDesign": "Design Produs",
+  "hardSkillBusinessIntelligence": "Business Intelligence",
+  "hardSkillDataVisualization": "Vizualizare Date",
+  "hardSkillDashboardCreation": "Creare Dashboard",
+  "hardSkillReporting": "Raportare",
+  "hardSkillAnalytics": "Analiză",
+  "hardSkillProjectManagement": "Management Proiecte",
+  "hardSkillMicrosoftOffice": "Microsoft Office",
+  "hardSkillSpreadsheetAnalysis": "Analiză Foi de Calcul",
+  "hardSkillPivotTables": "Tabele Pivot",
+  "hardSkillFinancialFunctions": "Funcții Financiare",
+  "hardSkillTaskManagement": "Management Sarcini",
+  "hardSkillWorkflowManagement": "Management Flux de Lucru",
+  "hardSkillDigitalMarketing": "Marketing Digital",
+  "hardSkillSocialMediaManagement": "Management Social Media",
+  "hardSkillContentCreation": "Creare Conținut",
+  "hardSkillContentMarketing": "Content Marketing",
+  "hardSkillCrmSystems": "Sisteme CRM",
+  "hardSkillEmailMarketing": "Email Marketing",
+  "hardSkillMarketingAutomation": "Automatizare Marketing",
+  "hardSkillCampaignManagement": "Management Campanii",
+  "hardSkillGraphicDesign": "Design Grafic",
+  "hardSkillVisualDesign": "Design Vizual",
+  "hardSkillVisualCommunication": "Comunicare Vizuală",
+  "hardSkillBrandDesign": "Design Brand",
+  "hardSkillUiUxDesign": "Design UI/UX",
+  "hardSkillWebDesign": "Design Web",
+  "hardSkillLogoDesign": "Design Logo",
+  "hardSkillPrintDesign": "Design Print",
+  "hardSkillArtificialIntelligence": "Inteligență Artificială",
+  "hardSkillPromptEngineering": "Prompt Engineering",
+  "hardSkillAiTools": "Instrumente IA",
+  "hardSkillAutomation": "Automatizare",
+  "hardSkillProcessAutomation": "Automatizare Procese",
+
+  "expandAll": "Extinde Tot",
+  "collapseAll": "Restrânge Tot"
 }
